Use javascript to control the box shadow of the search bar.

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <input class="lucky-btn" type="submit" value="I'm Feeling Lucky"></input>                 
                     </div>
                     <div class="report-inappropriate-predictions">
-                        <a href="#">report inappropriate predictions</a>
+                        <a href="#">Report inappropriate predictions</a>
                     </div>
                 </div>
 
