--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 
 <body>
-
     <header class="flexbox">
         <a class="head-left" href="#">About</a>
         <a class="head-left" href="#">Store</a>
@@ -30,7 +29,7 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                 </svg>
                 <!-- search bar -->
-                <input id="search-text" type="text">
+                <input class="search-text" id="search-text" type="text">
                 <div class="search-popup-content" id="search-floating-popup">
                     <div class="try-searching-for">
                         Try search for
@@ -79,7 +78,7 @@
 
     <!-- border-radius -->
 
-    <div class="top-right-popup-content flexbox" id="apps-popup">
+    <div class="google-apps-popup flexbox" id="apps-popup">
         <div class="apps-icon-section flexbox" id="apps-popup-section1">
             <!-- icons will be added here by javascript -->
         </div>
